--- a/about/style.css
+++ b/about/style.css
@@ -45,42 +45,54 @@
 
 
 
-@media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 600px) {
+    .navbar>.container{
+      justify-content:right !important;
+  
+    }
+    .navbar-toggler{
+      margin-left: auto;
+  
+    }
+    .container{
+      width: 100% !important;
+      /* margin-left: 10px !important;
+      margin-right: 10px !important; */
+    }
     .navBarLogo{
-        font-size: 18px;
-        margin-left: 3vw;
-        padding: 15px 0;
+      font-size: 12px !important;
+      padding: 20px 0;
     }
     .nav-link{
-        font-size: 16px;
-        width: 100vw;
-        
+      font-size: 10px;
+      width: 100vw;   
+      margin: 0 !important;
+      padding: 15px !important;
     }
     .navbar-nav{
-        border-top: solid rgb(98,99,101, .7);
-        border-width: 1px;
+      border-top: solid rgb(98,99,101, .7);
+      border-width: 1px;
     }
     #navService, #navHome, #navAbout, #navContact{
-        padding: 20px 25px;
+      padding: 20px 25px;
     }
     .mt-2, .my-2 {
-        margin-top: 0px !important;
+      margin-top: 0px !important;
     }
   }
-
+  
   @media only screen and (min-width: 601px)and (max-width: 1000px) {
     .navBarLogo{
-        font-size: 24px;
-    }
+      font-size: 20px !important;
+  }
     .nav-link{
-        font-size: 16px;
-        /* width: 100vw; */
-        text-align: center;
-        margin: 0px 3px;
-        padding: 30px;
-    }
+      font-size: 16px;
+      text-align: center;
+      margin: 0px 3px;
+      padding: 30px;
+  }
     .mb-2, .my-2 {
-        margin-bottom: 0px!important;
+      margin-bottom: 0px !important;
     }
   }
 
@@ -103,7 +115,7 @@
 .whoWeAre{
     position: relative;
     text-align: center;
-    top: 390px;
+    top: 80%;
     font-weight: 400;
     font-size: 48px;
     color: rgba(255, 255, 255, 0.9);
@@ -151,7 +163,7 @@
   }
   @media only screen and (min-width: 350px) and (max-width: 568px) {
     .aboutBanner{
-        background: url("/resources/images/astronaut_about_small-min.jpg");
+        background: url("../resources/images/astronaut_about_small-min.jpg");
         background-size: cover;
         background-position: center;
         height: 75vw;
@@ -173,7 +185,7 @@
   
   @media only screen and (min-width: 569px)and (max-width: 1000px) {
     .aboutBanner{
-        background: url("/resources/images/astronaut_about_small-min.jpg");
+        background: url("../resources/images/astronaut_about_small-min.jpg");
         background-size: cover;
         background-position: center;
         height: 75vw;
