--- a/style.css
+++ b/style.css
@@ -46,43 +46,55 @@ a:link{
 
 
 @media only screen and (max-width: 600px) {
-    .navBarLogo{
-        font-size: 18px;
-        margin-left: 3vw;
-        padding: 15px 0;
-    }
-    .nav-link{
-        font-size: 16px;
-        width: 100vw;
-        
-    }
-    .navbar-nav{
-        border-top: solid rgb(98,99,101, .7);
-        border-width: 1px;
-    }
-    #navService, #navHome, #navAbout, #navContact{
-        padding: 20px 25px;
-    }
-    .mt-2, .my-2 {
-        margin-top: 0px !important;
-    }
-  }
+  .navbar>.container{
+    justify-content:right !important;
 
-  @media only screen and (min-width: 601px)and (max-width: 1000px) {
-    .navBarLogo{
-        font-size: 24px;
-    }
-    .nav-link{
-        font-size: 16px;
-        /* width: 100vw; */
-        text-align: center;
-        margin: 0px 3px;
-        padding: 30px;
-    }
-    .mb-2, .my-2 {
-        margin-bottom: 0px!important;
-    }
   }
+  .navbar-toggler{
+    margin-left: auto;
+
+  }
+  .container{
+    width: 100% !important;
+    /* margin-left: 10px !important;
+    margin-right: 10px !important; */
+  }
+  .navBarLogo{
+    font-size: 12px !important;
+    padding: 20px 0;
+  }
+  .nav-link{
+    font-size: 10px;
+    width: 100vw;   
+    margin: 0 !important;
+    padding: 15px !important;
+  }
+  .navbar-nav{
+    border-top: solid rgb(98,99,101, .7);
+    border-width: 1px;
+  }
+  #navService, #navHome, #navAbout, #navContact{
+    padding: 20px 25px;
+  }
+  .mt-2, .my-2 {
+    margin-top: 0px !important;
+  }
+}
+
+@media only screen and (min-width: 601px)and (max-width: 1000px) {
+  .navBarLogo{
+    font-size: 20px !important;
+}
+  .nav-link{
+    font-size: 16px;
+    text-align: center;
+    margin: 0px 3px;
+    padding: 30px;
+}
+  .mb-2, .my-2 {
+    margin-bottom: 0px !important;
+  }
+}
 
 
 .homeTop{
@@ -192,7 +204,7 @@ a:link{
 
 @media only screen and (max-width: 349px) {
   .homeTop{
-    background: linear-gradient(rgba(20,20,20, 0.5), rgba(20,20,20, 0.5)), url("/images/satellite-1030779_1920_small-min.jpg");
+    background: linear-gradient(rgba(20,20,20, 0.5), rgba(20,20,20, 0.5)), url("./resources/images/satellite-1030779_1920_small-min.jpg");
     background-size: cover;
     background-position: center;
     height: 75vw;
@@ -235,7 +247,7 @@ a:link{
 }
 @media only screen and (min-width: 350px) and (max-width: 568px) {
   .homeTop{
-    background: linear-gradient(rgba(20,20,20, 0.5), rgba(20,20,20, 0.5)), url("/images/satellite-1030779_1920_small-min.jpg");
+    background: linear-gradient(rgba(20,20,20, 0.5), rgba(20,20,20, 0.5)), url("./resources/images/satellite-1030779_1920_small-min.jpg");
     background-size: cover;
     background-position: center;
     height: 75vw;
